"Separate images" in VSE is not working any longer #38566

Closed
opened 2014-02-10 01:46:25 +01:00 by Vicente Carro · 13 comments

2.69 official to current SVN.
Linux 64.

"Separate images" is not working anymore.
In the video sequencer If you select a video clip and go to Strip->Separate Images then you get a dialog asking for the number of frames for each frame. But whatever yo do, the strip will continue exactly the same.
The same result typing "Y" or as well as space->Separate Images.

Thanks

2.69 official to current SVN. Linux 64. "Separate images" is not working anymore. In the video sequencer If you select a video clip and go to Strip->Separate Images then you get a dialog asking for the number of frames for each frame. But whatever yo do, the strip will continue exactly the same. The same result typing "Y" or as well as space->Separate Images. Thanks
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @VicenteCarro

Added subscriber: @VicenteCarro

Added subscriber: @davidmcsween

Added subscriber: @davidmcsween

If you alter the value and press enter it works fine. But you're right, you should be able to use default value without cjanging it.

If you alter the value and press enter it works fine. But you're right, you should be able to use default value without cjanging it.
Author

David,
What version are you using?

David, What version are you using?

I am using 2.69 64bit windows hash: 646cc46
Ok after a quick test, you cannot split up a movie strip. But you CAN split an image sequence movie. The "Y" operator will not take effect until you alter the split value.

1.Add Image sequence strip.
2.Select strip, press "Y" to split strip into frames.
3.Function window appears, alter the fame value. eg. from 1 to 2 and back to 1.

The strip will be split into the length of frames you set.

The split function doesn't work on movie strips so it should not be available.

nb. If you want to decompose a movie clip into frames I suggest you render them out as an image sequence first, or use a combination of strip > Strobe > Speed Effect to slow the frame rate down.

I am using 2.69 64bit windows hash: 646cc46 Ok after a quick test, you cannot split up a movie strip. But you CAN split an image sequence movie. The "Y" operator will not take effect until you alter the split value. 1.Add Image sequence strip. 2.Select strip, press "Y" to split strip into frames. 3.Function window appears, alter the fame value. eg. from 1 to 2 and back to 1. The strip will be split into the length of frames you set. The split function doesn't work on movie strips so it should not be available. nb. If you want to decompose a movie clip into frames I suggest you render them out as an image sequence first, or use a combination of strip > Strobe > Speed Effect to slow the frame rate down.
Author

Ok.... so "it's a feature" ? :)
What about proposing to add the option to also split videos and not only sequences? I mean having ffmpeg already there .it should be really "easy" to do.

Ok.... so "it's a feature" ? :) What about proposing to add the option to also split videos and not only sequences? I mean having ffmpeg already there .it should be really "easy" to do.
Author

Hi again guys.
Don't know if I should open a new bug or continue this one.
Right now "separate images" is not working at all. And when I get the "Separate Images - Length:" dialog, if I change the default value then blender crash.
The bug looks quite unstable. I only got it working apparently fine after loading 2 jpg files. All my other tries have ended with the followin crash. But sometimes it works a bit, bit if I change again the value, it crashs...


./blender
ndof: unknown Logitech product c52b
ndof: using SpaceNavigator
found bundled python: /home/vicente/aplicaciones/blender/trunk/install/linux/2.70/python
Segmentation fault (core dumped)

So should I open a new one or this is ok?

Hi again guys. Don't know if I should open a new bug or continue this one. Right now "separate images" is not working at all. And when I get the "Separate Images - Length:" dialog, if I change the default value then blender crash. The bug looks quite unstable. I only got it working apparently fine after loading 2 jpg files. All my other tries have ended with the followin crash. But sometimes it works a bit, bit if I change again the value, it crashs... ``` ./blender ndof: unknown Logitech product c52b ndof: using SpaceNavigator found bundled python: /home/vicente/aplicaciones/blender/trunk/install/linux/2.70/python Segmentation fault (core dumped) ``` So should I open a new one or this is ok?

Added subscriber: @mont29

Added subscriber: @mont29

This issue was referenced by blender/blender-addons-contrib@ed26edb532

This issue was referenced by blender/blender-addons-contrib@ed26edb5323cc058ade61329c7928eb0caac1904

This issue was referenced by ed26edb532

This issue was referenced by ed26edb5323cc058ade61329c7928eb0caac1904

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ed26edb532.

Closed by commit ed26edb532.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38566
No description provided.