Fix T38566: "Separate images" in VSE is not working any longer